# swarm-sim

./: README.md
Description/polybot_description/: CMakeLists.txt  package.xml
Description/polybot_description/launch/: robot_description.launch.py
install/: local_setup.sh  setup.sh
log/: latest_build
pc/: CMakeLists.txt  package.xml
pc/launch/: bringup_launch.py  localization_launch.py  move_launch.py  multi_launch.py  navigation_launch.py  rviz_launch.py  simulation_launch.py  slam_launch.py
pc/params/: nav2_multirobot_params_robot3.yaml
pc/scripts/: nav_to_pose.py
polybot_robot/: package.xml
polybot_robot/launch/: sim_bringup.launch.py
polybot_robot/meshes/: Wheel.stl
polybot_robot/models/: polybot_v1.sdf
polybot_robot/params/: nav2_multirobot_params_1.yaml
remote/: CMakeLists.txt  package.xml
remote/launch/: bringup_launch.py  gazebo_launch.py  localization_launch.py  multi_launch.py  navigation_launch.py  robot_launch.py  simulation_launch.py  slam_launch.py
remote/maps/: factory_world.pgm  factory_world.yaml
remote/params/: nav2_multirobot_params_robot0.yaml  nav2_multirobot_params_robot1.yaml  nav2_multirobot_params_robot2.yaml  nav2_multirobot_params_robot3.yaml  nav2_multirobot_params_robot4.yaml  nav2_multirobot_params_robot5.yaml  nav2_multirobot_params_robot6.yaml  nav2_multirobot_params_robot7.yaml  nav2_multirobot_params_robot8.yaml  nav2_params.yaml
remote/urdf/: turtlebot3_waffle.urdf
remote/worlds/: empty_world.world  factory_world.world
src/centralized/: CMakeLists.txt  package.xml
src/polybot_robot/: CMakeLists.txt
(+41 files in other folders)
